<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Community App</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="use_existing_account">Use Existing Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_ncreate_a_new_account">Don\'t have an account?\nCreate a new account</string>
    <string name="already_have_an_account_nlogin_here">Already have an account?\nLogin Here</string>
    <string name="register">Register</string>
    <string name="users_list">Users List</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="full_name">Full Name</string>
    <string name="profile">Profile</string>
    <string name="communities">Communities</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_community">Community</string>
    <string name="title_activity_communities_list">CommunitiesList</string>
    <string name="click_to_edit">Click to Edit</string>
    <string name="community_name">Community Name</string>
    <string name="description">Description</string>
    <string name="create_community">Create Community</string>
</resources>
