<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mnahm5.community.CommunityDetailsActivity">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:visibility="invisible" />

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/tvProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfilePic"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="ChangeProfilePic"
        android:text="{fa-users}"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/click_to_edit"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvInstruction"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/community_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName"
        android:layout_below="@+id/etName"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDescription"
        android:layout_alignStart="@+id/etDescription"
        android:layout_below="@+id/etDescription"
        android:onClick="AddCommunity"
        android:text="@string/create_community" />

</android.widget.RelativeLayout>
